fixed captions on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,10 @@
 .carousel-control-prev /*, .carousel-indicators */ {
     filter: invert(100%);
 }
+
+@media screen and (max-width: 600px) {
+  
+  .imgCap{
+    font-size: 8pt;
+  }
+}
